--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,31 @@
-Django~=2.2.4
-asgiref==3.2.10
 bson==0.5.8
+chroma-py==0.1.0.dev1
+colour==0.1.5
+cycler==0.10.0
 dataclasses==0.6
+dj-database-url==0.5.0
 Django==2.2.13
 django-betterforms==1.2
-django-ckeditor==5.9.0
-django-crispy-forms==1.9.1
+django-ckeditor==6.1.0
+django-crispy-forms==1.13.0
 django-js-asset==1.2.2
-django-mapbox-location-field==1.5.0
-djongo==1.3.2
-dnspython==1.16.0
-Pillow==7.1.2
+django-mapbox-location-field==1.7.3
+django-widget-tweaks==1.4.8
+geojson==2.5.0
+Jinja2==3.0.1
+kiwisolver==1.3.2
+mapbox-location==1.0.3
+mapboxgl==0.10.2
+Markdown==3.3.4
+MarkupSafe==2.0.1
+matplotlib==3.4.3
+numpy==1.21.2
+Pillow==8.3.2
 pymongo==3.10.1
+pyparsing==2.4.7
 python-dateutil==2.8.1
+python-decouple==3.4
 pytz==2020.1
 six==1.15.0
+South==1.0.2
 sqlparse==0.2.4
